Update 0. Laravel Facade.md

--- a/Interview_Question_Ans/Facade/0. Laravel Facade.md
+++ b/Interview_Question_Ans/Facade/0. Laravel Facade.md
@@ -623,6 +623,8 @@ Laravel provides many built-in facades for its services:
 
 tutorial : https://www.youtube.com/watch?v=zD2VJhOdI5c
 
+main_tutorial Bangla : https://www.youtube.com/watch?v=AgxOb-hWlWM
+
 
 For more detailed exploration of Laravel Facades:
 1. [Laravel Documentation on Facades](https://laravel.com/docs/facades)
