Update 6.9.1.4. synchronize file from app->public->instasure , local to s3.md

--- a/Storage/6.9.1.4. synchronize file from app->public->instasure , local to s3.md
+++ b/Storage/6.9.1.4. synchronize file from app->public->instasure , local to s3.md
@@ -188,6 +188,101 @@ location /instasure/ {
 }
 ```
 
+## Update the nginx : 
+
+# Handle instasure files from local public directory
+location ~* ^/instasure/(.+)$ {
+    # First try local file in public/instasure directory
+    try_files /instasure/$1 @s3_instasure;
+    expires 1d;
+    add_header Cache-Control "public, max-age=86400";
+    add_header X-Served-By "Local-Instasure";
+    
+    # Don't pass PHP files to S3 - handle them locally
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_pass app:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$instasure$fastcgi_script_name;
+    }
+}
+
+# S3 fallback for instasure files
+location @s3_instasure {
+    proxy_pass https://s3.brilliant.com.bd/instasure/$1;
+    proxy_ssl_verify off;
+    proxy_ssl_server_name on;
+    proxy_set_header Host s3.brilliant.com.bd;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    
+    add_header Cache-Control "public, max-age=86400";
+    add_header X-Served-By "S3-Instasure";
+    
+    # If S3 fails, try to serve from local if exists
+    proxy_intercept_errors on;
+    error_page 404 500 502 503 504 = @local_instasure_fallback;
+}
+
+# Final fallback to local instasure file
+location @local_instasure_fallback {
+    # Try to serve the local file if it exists
+    try_files /instasure/$1 =404;
+    expires 1d;
+    add_header Cache-Control "public, max-age=86400";
+    add_header X-Served-By "Local-Instasure-Fallback";
+}
+
+## Nginx Full Configuration : 
+
+# Handle instasure files from local public directory
+location ~* ^/instasure/(.+)$ {
+    # First try local file in public/instasure directory
+    try_files /instasure/$1 @s3_instasure;
+    expires 1d;
+    add_header Cache-Control "public, max-age=86400";
+    add_header X-Served-By "Local-Instasure";
+    
+    # Don't pass PHP files to S3 - handle them locally
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_pass app:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$instasure$fastcgi_script_name;
+    }
+}
+
+# S3 fallback for instasure files
+location @s3_instasure {
+    proxy_pass https://s3.brilliant.com.bd/instasure/$1;
+    proxy_ssl_verify off;
+    proxy_ssl_server_name on;
+    proxy_set_header Host s3.brilliant.com.bd;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    
+    add_header Cache-Control "public, max-age=86400";
+    add_header X-Served-By "S3-Instasure";
+    
+    # If S3 fails, try to serve from local if exists
+    proxy_intercept_errors on;
+    error_page 404 500 502 503 504 = @local_instasure_fallback;
+}
+
+# Final fallback to local instasure file
+location @local_instasure_fallback {
+    # Try to serve the local file if it exists
+    try_files /instasure/$1 =404;
+    expires 1d;
+    add_header Cache-Control "public, max-age=86400";
+    add_header X-Served-By "Local-Instasure-Fallback";
+}
+
+
 ## The Complete Flow:
 
 1. **S3 Available**: Files stored directly to S3 at `/instasure/path/to/file`
