Update 6.9.1.4. synchronize file from app->public->instasure , local to s3.md

--- a/Storage/6.9.1.4. synchronize file from app->public->instasure , local to s3.md
+++ b/Storage/6.9.1.4. synchronize file from app->public->instasure , local to s3.md
@@ -190,6 +190,7 @@ location /instasure/ {
 
 ## Update the nginx : 
 
+```nginx
 # Handle instasure files from local public directory
 location ~* ^/instasure/(.+)$ {
     # First try local file in public/instasure directory
@@ -281,7 +282,7 @@ location @local_instasure_fallback {
     add_header Cache-Control "public, max-age=86400";
     add_header X-Served-By "Local-Instasure-Fallback";
 }
-
+```
 
 ## The Complete Flow:
 
