Update 6.9.1.4. synchronize file from app->public->instasure , local to s3.md

--- a/Storage/6.9.1.4. synchronize file from app->public->instasure , local to s3.md
+++ b/Storage/6.9.1.4. synchronize file from app->public->instasure , local to s3.md
@@ -191,96 +191,142 @@ location /instasure/ {
 ## Update the nginx : 
 
 ```nginx
-# Handle instasure files from local public directory
-location ~* ^/instasure/(.+)$ {
-    # First try local file in public/instasure directory
-    try_files /instasure/$1 @s3_instasure;
-    expires 1d;
-    add_header Cache-Control "public, max-age=86400";
-    add_header X-Served-By "Local-Instasure";
-    
-    # Don't pass PHP files to S3 - handle them locally
+server {
+    listen 80;
+    server_name localhost 36.255.69.72;
+    index index.php index.html;
+    error_log  /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+    root /var/www/html/public;
+
+    # Basic Laravel configuration
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    # PHP-FPM configuration
     location ~ \.php$ {
         try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass app:9000;
         fastcgi_index index.php;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$instasure$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        
+        # Increase timeouts for file uploads
+        fastcgi_read_timeout 300;
+        fastcgi_connect_timeout 300;
+        fastcgi_send_timeout 300;
     }
-}
 
-# S3 fallback for instasure files
-location @s3_instasure {
-    proxy_pass https://s3.brilliant.com.bd/instasure/$1;
-    proxy_ssl_verify off;
-    proxy_ssl_server_name on;
-    proxy_set_header Host s3.brilliant.com.bd;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    
-    add_header Cache-Control "public, max-age=86400";
-    add_header X-Served-By "S3-Instasure";
-    
-    # If S3 fails, try to serve from local if exists
-    proxy_intercept_errors on;
-    error_page 404 500 502 503 504 = @local_instasure_fallback;
-}
-
-# Final fallback to local instasure file
-location @local_instasure_fallback {
-    # Try to serve the local file if it exists
-    try_files /instasure/$1 =404;
-    expires 1d;
-    add_header Cache-Control "public, max-age=86400";
-    add_header X-Served-By "Local-Instasure-Fallback";
-}
-
-## Nginx Full Configuration : 
-
-# Handle instasure files from local public directory
-location ~* ^/instasure/(.+)$ {
-    # First try local file in public/instasure directory
-    try_files /instasure/$1 @s3_instasure;
-    expires 1d;
-    add_header Cache-Control "public, max-age=86400";
-    add_header X-Served-By "Local-Instasure";
-    
-    # Don't pass PHP files to S3 - handle them locally
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_pass app:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$instasure$fastcgi_script_name;
+    # Handle static files locally first, then S3
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+        try_files $uri @s3_fallback;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        add_header X-Served-By "Local-Static";
     }
-}
 
-# S3 fallback for instasure files
-location @s3_instasure {
-    proxy_pass https://s3.brilliant.com.bd/instasure/$1;
-    proxy_ssl_verify off;
-    proxy_ssl_server_name on;
-    proxy_set_header Host s3.brilliant.com.bd;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    
-    add_header Cache-Control "public, max-age=86400";
-    add_header X-Served-By "S3-Instasure";
-    
-    # If S3 fails, try to serve from local if exists
-    proxy_intercept_errors on;
-    error_page 404 500 502 503 504 = @local_instasure_fallback;
-}
+    # S3 fallback for static files
+    location @s3_fallback {
+        proxy_pass https://s3.brilliant.com.bd/instasure/public$uri;
+        proxy_ssl_verify off;
+        proxy_ssl_server_name on;
+        proxy_set_header Host s3.brilliant.com.bd;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        add_header Cache-Control "public, max-age=31536000, immutable";
+        add_header X-Served-By "S3-Fallback";
+        
+        # If S3 also fails, return 404
+        proxy_intercept_errors on;
+        error_page 404 = @final_404;
+    }
 
-# Final fallback to local instasure file
-location @local_instasure_fallback {
-    # Try to serve the local file if it exists
-    try_files /instasure/$1 =404;
-    expires 1d;
-    add_header Cache-Control "public, max-age=86400";
-    add_header X-Served-By "Local-Instasure-Fallback";
+    # Handle instasure files from local public directory
+    location ~* ^/instasure/(.+)$ {
+        # First try local file in public/instasure directory
+        try_files /instasure/$1 @s3_instasure;
+        expires 1d;
+        add_header Cache-Control "public, max-age=86400";
+        add_header X-Served-By "Local-Instasure";
+    }
+
+    # S3 fallback for instasure files
+    location @s3_instasure {
+        proxy_pass https://s3.brilliant.com.bd/instasure/$1;
+        proxy_ssl_verify off;
+        proxy_ssl_server_name on;
+        proxy_set_header Host s3.brilliant.com.bd;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        add_header Cache-Control "public, max-age=86400";
+        add_header X-Served-By "S3-Instasure";
+        
+        # If S3 fails, try to serve from local if exists
+        proxy_intercept_errors on;
+        error_page 404 500 502 503 504 = @local_instasure_fallback;
+    }
+
+    # Final fallback to local instasure file
+    location @local_instasure_fallback {
+        # Try to serve the local file if it exists
+        try_files /instasure/$1 =404;
+        expires 1d;
+        add_header Cache-Control "public, max-age=86400";
+        add_header X-Served-By "Local-Instasure-Fallback";
+    }
+
+    # Handle storage files from S3 with local fallback
+    location ~* ^/storage/(.+)$ {
+        # First try local storage
+        try_files /storage/$1 @s3_storage;
+        expires 1d;
+        add_header Cache-Control "public, max-age=86400";
+        add_header X-Served-By "Local-Storage";
+    }
+
+    # S3 storage fallback
+    location @s3_storage {
+        proxy_pass https://s3.brilliant.com.bd/instasure/storage/$1;
+        proxy_ssl_verify off;
+        proxy_ssl_server_name on;
+        proxy_set_header Host s3.brilliant.com.bd;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        add_header Cache-Control "public, max-age=86400";
+        add_header X-Served-By "S3-Storage";
+    }
+
+    # Final 404 handler
+    location @final_404 {
+        return 404;
+    }
+
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
+    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+
+    # Hide nginx version
+    server_tokens off;
+
+    # Deny access to hidden files
+    location ~ /\. {
+        deny all;
+    }
+
+    # File upload size
+    client_max_body_size 100M;
 }
 ```
 
