Update 6.9.1.4. synchronize file from app->public->instasure , local to s3.md

--- a/Storage/6.9.1.4. synchronize file from app->public->instasure , local to s3.md
+++ b/Storage/6.9.1.4. synchronize file from app->public->instasure , local to s3.md
@@ -5,31 +5,52 @@ Yes, you're exactly right! Here's how to set it up properly:
 ```php
 // config/filesystems.php
 
-'disks' => [
-    // ... other disks
+ 'disks' => [
+        'local' => [
+            'driver' => 'local',
+            'root' => storage_path('app'),
+            'throw' => false,
+        ],
 
-    's3' => [
-        'driver' => 's3',
-        'key' => env('S3_KEY'),
-        'secret' => env('S3_SECRET'),
-        'region' => env('S3_REGION'),
-        'bucket' => env('S3_BUCKET'),
-        'url' => env('S3_URL'),
-        'endpoint' => env('S3_ENDPOINT'),
-        'use_path_style_endpoint' => env('S3_USE_PATH_STYLE', false),
-        'throw' => false,
-        'visibility' => 'public',
-        'root' => 'instasure', // S3 files go to /instasure/ folder
-    ],
+        'public' => [
+            'driver' => 'local',
+            'root' => storage_path('app/public'),
+            'url' => env('APP_URL') . '/storage',
+            'visibility' => 'public',
+            'throw' => false,
+        ],
 
-    'fallback' => [
-        'driver' => 'local',
-        'root' => public_path('instasure'), // Local files go to /app/public/instasure/
-        'url' => env('APP_URL').'/instasure', // URL for accessing local files
-        'visibility' => 'public',
-        'throw' => false,
+        's3' => [
+            'driver' => 's3',
+            'key' => env('S3_KEY'),
+            'secret' => env('S3_SECRET'),
+            'region' => env('S3_REGION'),
+            'bucket' => env('S3_BUCKET'),
+            'url' => env('S3_URL'),
+            'endpoint' => env('S3_ENDPOINT'),
+            'use_path_style_endpoint' => env('S3_USE_PATH_STYLE', false),
+            'throw' => false,
+            'visibility' => 'public',
+            'root' => 'instasure', // Add this back to point to /instasure directory in S3
+            'options' => [
+                'CacheControl' => 'max-age=31536000',
+                'Metadata' => [
+                    'source' => 'laravel-app'
+                ]
+            ],
+        ],
+
+        // Add this fallback disk
+        'fallback' => [
+            'driver' => 'local',
+            // 'root' => storage_path('app/instasure'), //storage path -> /app/storage/app/instasure/
+            'root' => public_path('instasure'), // Changed to public_path /app/public/instasure/
+            // 'url' => env('APP_URL') . '/storage/instasure',
+            'url' => env('APP_URL') . '/instasure',
+            'visibility' => 'public',
+            'throw' => false,
+        ],
     ],
-],
 ```
 
 ## 2. Update StorageService for Public Directory Sync
