Update 6.9.1.4. synchronize file from app->public->instasure , local to s3.md

--- a/Storage/6.9.1.4. synchronize file from app->public->instasure , local to s3.md
+++ b/Storage/6.9.1.4. synchronize file from app->public->instasure , local to s3.md
@@ -69,10 +69,112 @@ use Exception;
 
 class StorageService
 {
-    // ... other properties and methods
+    protected $primaryDisk;
+    protected $fallbackDisk;
+    protected $syncEnabled;
+    protected $autoRetry;
+    protected $maxRetries;
+    protected $isS3Available;
+
+    public function __construct()
+    {
+        $config = config('filesystems.storage_config');
+        $this->primaryDisk = $config['primary_disk'];
+        $this->fallbackDisk = $config['fallback_disk'];
+        $this->syncEnabled = $config['sync_enabled'];
+        $this->autoRetry = $config['auto_retry'];
+        $this->maxRetries = $config['max_retries'];
+        $this->isS3Available = $this->checkS3Connection();
+    }
 
     /**
-     * Synchronize files from local public directory to S3
+     * Check S3 connection with proper error handling
+     */
+    protected function checkS3Connection(): bool
+    {
+        try {
+            // Use a simple operation to test connection - list files in root
+            Storage::disk('s3')->files('/');
+            return true;
+        } catch (S3Exception $e) {
+            Log::warning('S3 connection failed: ' . $e->getMessage());
+            return false;
+        } catch (Exception $e) {
+            Log::error('Storage connection check error: ' . $e->getMessage());
+            return false;
+        }
+    }
+
+    /**
+     * Get active disk based on availability (with real-time check)
+     */
+    protected function getActiveDisk(): string
+    {
+        // Always check S3 availability in real-time
+        $this->isS3Available = $this->checkS3Connection();
+        return $this->isS3Available ? $this->primaryDisk : $this->fallbackDisk;
+    }
+
+    /**
+     * Store file with automatic fallback
+     */
+    public function store(string $path, $contents, array $options = []): bool
+    {
+        $activeDisk = $this->getActiveDisk();
+        $retryCount = 0;
+
+        while ($retryCount <= $this->maxRetries) {
+            try {
+                $success = Storage::disk($activeDisk)->put($path, $contents, $options);
+                
+                if ($success && $this->syncEnabled && $activeDisk === $this->fallbackDisk) {
+                    $this->queueForSync($path);
+                }
+                
+                return $success;
+            } catch (Exception $e) {
+                $retryCount++;
+                
+                if ($retryCount > $this->maxRetries || !$this->autoRetry) {
+                    Log::error("Failed to store file after {$retryCount} attempts: " . $e->getMessage());
+                    return false;
+                }
+
+                // Switch to fallback on failure and re-check connection
+                if ($activeDisk === $this->primaryDisk) {
+                    $activeDisk = $this->fallbackDisk;
+                    $this->isS3Available = false;
+                    Log::warning("Switched to fallback storage after S3 failure: " . $e->getMessage());
+                }
+                
+                sleep(1); // Wait before retry
+            }
+        }
+
+        return false;
+    }
+
+    /**
+     * Queue file for synchronization
+     */
+    protected function queueForSync(string $path): void
+    {
+        $syncQueue = Cache::get('storage_sync_queue', []);
+        
+        // Avoid duplicates
+        if (!in_array($path, array_column($syncQueue, 'path'))) {
+            $syncQueue[] = [
+                'path' => $path,
+                'disk' => $this->fallbackDisk,
+                'timestamp' => now(),
+                'attempts' => 0,
+            ];
+            Cache::put('storage_sync_queue', $syncQueue, 86400); // 24 hours
+        }
+    }
+
+    /**
+     * Synchronize files from local to S3
      */
     public function synchronize(): array
     {
@@ -97,9 +199,6 @@ class StorageService
                     if ($success) {
                         $results['successful']++;
                         unset($syncQueue[$index]);
-                        
-                        // Optional: Delete local file after successful sync
-                        // unlink($localPath);
                     } else {
                         $file['attempts']++;
                         $results['failed']++;
@@ -120,7 +219,24 @@ class StorageService
     }
 
     /**
-     * Get file URL - returns S3 URL if available, local URL if not
+     * Check if S3 is available (real-time check)
+     */
+    public function isS3Available(): bool
+    {
+        return $this->checkS3Connection();
+    }
+
+    /**
+     * Force check S3 connection
+     */
+    public function checkConnection(): bool
+    {
+        $this->isS3Available = $this->checkS3Connection();
+        return $this->isS3Available;
+    }
+
+    /**
+     * Get file URL
      */
     public function url(string $path): string
     {
@@ -135,7 +251,14 @@ class StorageService
         }
     }
 
-    // ... rest of the class
+    /**
+     * Proxy method calls to appropriate disk
+     */
+    public function __call($method, $args)
+    {
+        $activeDisk = $this->getActiveDisk();
+        return Storage::disk($activeDisk)->$method(...$args);
+    }
 }
 ```
 
