Update 1. Fix the permission for S3 buckets.md

--- a/Storage/S3 Complete note/Problem Fix/1. Fix the permission for S3 buckets.md
+++ b/Storage/S3 Complete note/Problem Fix/1. Fix the permission for S3 buckets.md
@@ -12,6 +12,9 @@ exit
 
 # Get root access in container
 docker exec -it --user root $(docker ps -qf "name=app") bash
+#for the docker replica 1st container bash :
+
+docker exec -it --user root $(docker ps -qf "name=app" | head -n1) bash
 
 # Add ACL for www user
 setfacl -m u:www:rwx /var/www/html/public/instasure
