Update 0.1. ORM Relationship Cheat Sheet.md

--- a/ORM Note /0.1. ORM Relationship Cheat Sheet.md
+++ b/ORM Note /0.1. ORM Relationship Cheat Sheet.md
@@ -251,7 +251,7 @@ Schema::create('comments', function (Blueprint $table) {
     $table->id();
     $table->bigInteger('user_id');
     $table->text('body');
-    $table->morphs('commentable');  // Creates commentable_id and commentable_type
+    $table->morphs('commentable');  // Creates commentable_id and commentable_type  // 1. commentable_id (Post_id or Video_id or Other_Model_id)   |   2.  // (A comment can belong to either a Post, Video, etc.)
     $table->timestamps();
 });
 
@@ -279,7 +279,7 @@ public function comments() {
           │ id        │
           │ user_id   │
           │ body      │
-          │ commentable_id   │
+          │ commentable_id   │  //post_id or video_id
           │ commentable_type │
           └───────────┘
              ▲     ▲
